# Graph-Application-Using-Qt-and-Qml

./: CMakeLists.txt  DataPoint.cpp  DataPoint.h  DataProvider.cpp  DataProvider.h  FastCharger_graph_Example.pro  GraphItem.cpp  GraphItem.h  README.md  main.cpp  main.qml  qml.qrc
Components/: GraphWindow.qml
